--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,9 +14,14 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
+        def WEATHER_KEY = "WEATHER_KEY"
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField "String", WEATHER_KEY, '"e44d02fff19244c3b30205216181609"'
+        }
+        debug {
+            buildConfigField "String", WEATHER_KEY, '"e44d02fff19244c3b30205216181609"'
         }
     }
 }
