--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,14 +3,14 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion Version.androidCompileSdk
     defaultConfig {
         applicationId "kioli.myalgia"
-        minSdkVersion 16
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        minSdkVersion Version.androidMinSdk
+        targetSdkVersion Version.androidTargetSdk
+        versionCode Version.androidVersionCode
+        versionName Version.androidVersionName
+        testInstrumentationRunner Lib.testInstrumentationRunner
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
@@ -27,19 +27,23 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'org.kodein.di:kodein-di-generic-jvm:5.2.0'
-    implementation 'org.kodein.di:kodein-di-framework-android:5.0.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.5'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.22.5'
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation Lib.kotlin
+    implementation Lib.kodein
+    implementation Lib.kodeinFramework
+    implementation Lib.room
+    implementation Lib.supportLib
+    implementation Lib.coroutinesAndroid
+    implementation Lib.coroutinesCore
+    implementation Lib.retrofit
+    implementation Lib.retrofitConverter
+    implementation Lib.okHttpLogger
+    implementation Lib.picasso
 
-    testImplementation 'junit:junit:4.12'
+    kapt Lib.roomCompiler
 
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    testImplementation Lib.junit
+    testImplementation Lib.roomTesting
+
+    androidTestImplementation Lib.espressoRunner
+    androidTestImplementation Lib.espresso
 }
