--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion Version.androidCompileSdk
@@ -45,6 +46,9 @@ dependencies {
     implementation Lib.okHttpLogger
     implementation Lib.picasso
     implementation Lib.timber
+    implementation("com.crashlytics.sdk.android:crashlytics:${Version.fabric}") {
+        transitive = true
+    }
 
     kapt Lib.roomCompiler
 
