Better handle settings

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,13 @@ android {
     }
 }
 
+configurations.all {
+    resolutionStrategy {
+        failOnVersionConflict()
+        preferProjectModules()
+    }
+}
+
 dependencies {
     implementation Lib.constraintLayout
     implementation Lib.coroutinesAndroid
