--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:3.2.1"
+        classpath "com.android.tools.build:gradle:${Version.gradleBuildTool}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Version.kotlin}"
         classpath "io.fabric.tools:gradle:${Version.fabricTool}"
     }
